--- a/lib/linguist/languages.yml
+++ b/lib/linguist/languages.yml
@@ -2128,6 +2128,16 @@ Java:
   extensions:
   - ".java"
   language_id: 181
+Java Properties:
+  type: data
+  group: Java
+  extensions:
+  - ".properties"
+  tm_scope: source.java-properties
+  ace_mode: properties
+  codemirror_mode: properties
+  codemirror_mime_type: text/x-properties
+  language_id: 519377561
 Java Server Pages:
   type: programming
   group: Java
